--- a/public/about.html
+++ b/public/about.html
@@ -1,12 +1,14 @@
 <h1>Hey</h1>
 <img src="../assets/images/sam.jpg" alt="pic of Sam holding mug, sitting in front of laptop" height="400">
 <p>Your business is your heart and soul!</p> 
-<p>But…</p> 
-<p>Your to-do list is endless.</p>
-<p>You value a healthy work/life balance but struggle to take a break.</p>
-<p>Getting more eyes ON your business, let alone IN your business, is tough. </p>
-<p>You don’t have the knowledge or skills or time to learn new things.</p>
-<p>Marketing your business is time-consuming.</p>
+<p>But…</p>
+<ul>
+    <li>Your to-do list is endless.</li>
+    <li>You value a healthy work/life balance but struggle to take a break.</li>
+    <li>Getting more eyes ON your business, let alone IN your business, is tough.</li>
+    <li>You don’t have the knowledge or skills or time to learn new things.</li>
+    <li>Marketing your business is time-consuming.</li>
+</ul>
 <p>Your business and brand is one that offers inspiration, guidance, support, and value, in helping others. And your goal is to be able to live an enriched life of freedom and a great sense of balance.</p>
 <p>Less work, more play. We could all do with that, am I right?</p>
 <p>Quit daydreaming of growing your business.</p>
@@ -19,9 +21,11 @@
 <p>That’s where I come in…</p>
 <p>I’m Sam and I help passionate and creative entrepreneurs with…getting seen, widening the reach of their target market, driving more website traffic, and growing – through stress-free and strategic WordPress web design, Pinterest marketing, and Canva graphic design.</p>
 <a href="../public/contact.html">Let's connect</a>
-<p>Build or update your website that gives you an online presence 24/7.</p>
-<p>Expand your reach on a visual search engine where content lives for days, weeks, months, and sometimes even years compared to the short lifespan of a social media post.</p>
-<p>Greater insight into what your people like, enjoy, and want more – giving you a clearer direction towards growth.</p>
+<ul>
+    <li>Build or update your website that gives you an online presence 24/7.</li>
+    <li>Expand your reach on a visual search engine where content lives for days, weeks, months, and sometimes even years compared to the short lifespan of a social media post.</li>
+    <li>Greater insight into what your people like, enjoy, and want more – giving you a clearer direction towards growth.</li>
+</ul>
 <p>All this will allow your dream to continue to blossom, even while you sleep!</p>
 <p>My goal is simple…I want to help others! Seeing others achieve great things is inspiring, motivating, and I love celebrating alongside them.</p>
 <p>I want to do the same for you and with you!</p>
@@ -32,4 +36,3 @@ I am here to do the work for you. Stress-free and zero hassle, allowing you to s
 <a href="../public/contact.html">Yes! I need your help!</a>
 <hr/>
 <a href="../index.html">Home</a> <a href="../public/contact.html">Contact</a>
-
