--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
 <h1>Sam Base's Portfolio</h1>
 <h2>I am a WordPress Web Designer & Developer</h2>
 <hr/>
+<h3><a href="./public/resume.html">Capstone Project 1 - My Resume</a></h3>
+<p>This is the first of the Capstone Projects completed for The Complete 2024 Web Development Bootcamp course by Dr Angela Yu (through Udemy).</p>
+<p>This was to test my competency in the following:
+    <ul>
+        <li>writing HTML code</li>
+        <li>using appropriate HTML tags to format the content</li>
+        <li>adding images within HTML</li>
+        <li>using relevant anchor tags to create a multi-page website</li>
+        <li>adding a footer element</li>
+        <li>saving the index.html file and uploading to GitHub</li>
+    </ul>
+</p>
+<img src="./assets/images/resume.png" alt="screenshot of my resume - capstone project one" height="200">
 <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+<p>This was an exercise for understanding HTML heading tags.</p>
 <img src="./assets/images/movie-ranking.png" alt="screenshot of movie ranking project" height="200">
 <hr/>
 <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+<p>This was an exercise for understanding HTML heading tags, anchor tags, using images, and using list tags.</p>
 <img src="./assets/images/birthday-invite.png" alt="screenshot of birthday invite project" height="200">
 <hr/>
 <a href="./public/contact.html">Contact Me</a> <a href="./public/about.html">About Me</a>
